name:                pgm
version:             0.1.0.0
synopsis:            basic pgm stuff
author:              Ian Horn
maintainer:          horn.imh@gmail.com
copyright:           Copyright (c) 2014, Ian Horn
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable pgm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.6 && <5
                     , containers >= 0.5.5.1
  ghc-options:         -threaded -O2

--  ghc-options:      -O2 -Wall
--  ghc-prof-options: -O2 -Wall -prof -fprof-auto -fprof-cafs -rtsopts
